# platform-cli

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  README.md  code.json  flake.nix  mkdocs.yml  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  epic.md
.github/actions/configure-git/: action.yml
.github/actions/setup-cli/: action.yml
.github/actions/setup-nix/: action.yml
.github/actions/upload-cli-logs/: action.yml
.github/workflows/: cd-docs.yml  ci-container-template.yml  ci-container.yml  ci-docker.yml  ci-nix-template.yml  ci-nix.yml  ci-pipx.yml  ci-py-template.yml  ci-py.yml  ci-uv.yml
docs/: .nav.yaml  .pages  adding-an-app.md  avoiding-conflicts-on-update.md  how-it-works.md  updating.md
docs/getting-started/: .nav.yaml  .pages  help.md  index.md  installation.md  migrating-from-legacy-template.md  new-project.md  usage.md  working-with-existing-template.md
docs/guides/: adding-an-app.md  avoiding-conflicts-on-update.md  index.md  migrating-from-legacy-template.md  new-project.md  updating.md
docs/reference/: development.md  how-templates-work.md  index.md
nava/: cli.py  git.py  infra_template.py  project.py  template.py
nava/commands/: app.py  infra.py
nava/commands/infra/: __init__.py  add_app_command.py  compute_app_includes_excludes.py  get_app_names.py  install_command.py  migrate_from_legacy_command.py  update_command.py
nava/platform/: copier_worker.py  get_app_names_from_infra_dir.py  get_template_name_from_uri.py  infra_project.py  infra_template.py  migrate_from_legacy_template.py  project.py  template.py  types.py
nava/platform/cli/: __main__.py  config.py  console.py  context.py  exceptions.py  main.py
nava/platform/cli/commands/: app.py  common.py  info.py  mcp.py
nava/platform/cli/commands/infra/: __init__.py  add_app_command.py  info_command.py  install_command.py  migrate_from_legacy_command.py  update_command.py
nava/platform/cli/logging/: __init__.py  audit.py  config.py  platform_info.py  timestamp_timezone_stamper.py
nava/platform/projects/: get_app_names_from_infra_dir.py  get_app_names_from_template_answers.py  info.py  infra_project.py  migrate_from_legacy_template.py  project.py
nava/platform/templates/: errors.py  infra_template.py  state.py  template.py  template_name.py  util.py
nava/platform/util/: git.py  strings.py  wrappers.py
nava/platform/util/collections/: dict.py
nava/platform/util/files/: inode.py
platform/: cli.py
platform/commands/: app.py
tests/: conftest.py  test_get_app_names_from_dir.py  test_migrate_from_legacy_template.py  test_project.py  test_template.py
tests-e2e/: common.sh  lib.sh  test  test-local-templates  test-migrate-from-legacy-infra  test-no-initial-directory
tests/cli/commands/infra/: test_add_app_command.py  test_compute_excludes.py  test_get_app_names.py  test_info_command.py  test_install_command.py  test_migrate_from_legacy_command.py  test_update_command.py
tests/commands/: test_infra.py
tests/commands/infra/: test_add_app_command.py  test_compute_app_includes_excludes.py  test_compute_excludes.py  test_get_app_names.py  test_install_command.py  test_migrate_from_legacy_command.py  test_update_command.py
tests/lib/: __init__.py  asserts.py  changeset.py  directory.py  directory_content.py  directory_state.py  git.py  infra_template_writable.py  new_directory.py  test_directory_content.py
tests/projects/: test_get_app_names_from_dir.py  test_get_app_names_from_template_answers.py  test_migrate_from_legacy_template.py  test_project.py
tests/util/collections/: test_dict.py
