[project]
requires-python = ">=3.11"

[tool.poetry]
name = "nava-platform-cli"
version = "0.1.0"
description = "Nava PBC's Platform CLI tool for managing platform templates"
authors = ["Your Name <you@example.com>"]
license = "Apache License Version 2.0"
readme = "README.md"
packages = [{ include = "nava" }]

[tool.poetry.dependencies]
python = "^3.11"
copier = {git = "https://github.com/copier-org/copier.git"}
pyyaml = "^6.0.2"
rich = "^13.9.4"
structlog = "^24.4.0"
platformdirs = "^4.3.6"
questionary = {git = "https://github.com/tmbo/questionary.git"}
packaging = "^24.1"
typer = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"
mypy = "^1.11.2"
types-pyyaml = "^6.0.12.20240917"
ruff = "0.8.3"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
nava-platform = "nava.platform.cli.__main__:__main__"

[tool.mypy]
strict = true
# local_partial_types will be enabled by default in mypy 2.0, so start now
# https://mypy.readthedocs.io/en/stable/changelog.html#mypy-1-12
local_partial_types = true
pretty = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
lint.select = [
    # pydocstyle
    "D", "D404",
    # pycodestyle, ones that don't deal with formatting
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-debugger
    "T10",
    # isort
    "I",
]
lint.ignore = [
    # don't require *every* public thing to have a docstring, at least for now
    "D1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
