[project]
name = "nava-platform-cli"
version = "0.1.0"
description = "Nava PBC's Platform CLI tool for managing platform templates"
# once https://peps.python.org/pep-0639 is in force
# license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "copier",
    "packaging>=24.1",
    "platformdirs>=4.3.6",
    "pyyaml>=6.0.2",
    "questionary",
    "rich>=13.9.4",
    "structlog>=24.4.0",
    "typer>=0.15.1",
]

[tool.uv]
required-version = ">0.5.8"

[tool.uv.sources]
copier = { git = "https://github.com/copier-org/copier" }
questionary = { git = "https://github.com/tmbo/questionary" }

[project.scripts]
nava-platform = "nava.platform.cli.__main__:__main__"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-mock>=3.14.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
    "ruff>=0.8.3",
    "types-pyyaml>=6.0.12.20240917",
]

[tool.mypy]
strict = true
# local_partial_types will be enabled by default in mypy 2.0, so start now
# https://mypy.readthedocs.io/en/stable/changelog.html#mypy-1-12
local_partial_types = true
pretty = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
# see docs at https://docs.astral.sh/ruff/rules
lint.select = [
    # flake8-bugbear
    "B",
    # pydocstyle
    "D", "D404",
    # pycodestyle, ones that don't deal with formatting
    "E4", "E7", "E9",
    # Pyflakes
    "F",
    # refurb
    "FURB",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pep8-naming
    "N",
    # perflint
    "PERF",
    # flake8-pytest-style
    "PT",
    # ruff stuff
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-debugger
    "T10",
    # pyupgrade
    "UP",
]
lint.ignore = [
    # don't require *every* public thing to have a docstring, at least for now
    "D1",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["nava"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
